--- a/Endabgabe/css/style.css
+++ b/Endabgabe/css/style.css
@@ -1,15 +1,3 @@
-@keyframes comeup{
-    from{
-        opacity: 0%;
-        height: 20%;
-        margin-top: 10%;
-    }
-    to{
-        opacity: 100%;
-        height: 100%;
-        margin-top: 3.5%;
-    }
-}
 body{
     background-image: url("../media/background.jpg");
     text-align: center;
@@ -118,6 +106,9 @@ a{
 .setOpacityUp{
     opacity: 100%;
 }
+.hiddenFormulare{
+    display: none;
+}
 /*Tablet*/@media screen and (max-width: 1024px) {
 h1{
     font-size: 4.5em;
@@ -141,18 +132,6 @@ p{
 #firstname{
     width: 35%;
     padding-top: 0.1%;
-}
-@keyframes comeup{
-    from{
-        opacity: 0%;
-        height: 20%;
-        margin-top: 15%;
-    }
-    to{
-        opacity: 100%;
-        height: 100%;
-        margin-top: 6.5%;
-    }
 }
 }
 
@@ -192,20 +171,11 @@ button{
 }
 .picture{
     width: 80px;
+    height: 80px;
+    margin-right: 5%;
+    object-fit: cover;
 }
 .pictureTable{
     margin-top: -5%;
-}
-@keyframes comeup{
-    from{
-        opacity: 0%;
-        height: 20%;
-        margin-top: 25%;
-    }
-    to{
-        opacity: 100%;
-        height: 100%;
-        margin-top: 9.5%;
-    }
 }
 }
